[Issue #6] Added padding to the comic covers displayed.

--- a/web-frontend/src/app/comic/comic-list-entry/comic-list-entry.component.css
+++ b/web-frontend/src/app/comic/comic-list-entry/comic-list-entry.component.css
@@ -24,3 +24,7 @@
 	padding-left: 5px;
 	padding-right: 5px;
 }
+
+.comic-entry {
+	padding: 0px 0px 5px 15px;
+}
